adjusted alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ header {
 }
 
 .head {
-    margin-left: 60%;
+    margin-left: auto;
     margin-right: 0;
     padding: 5px 5px 5px 20px;
     width: 360px;
